# RecBole

./: RMIA.py  compute_shadow_models_script.py  config (Copy).yaml  config.yaml  config_bpr.yaml  config_bpr_unlearn.yaml  config_dccf.yaml  config_dnntsp.yaml  config_ease.yaml  config_gru4rec.yaml  config_gru4rec_spam_test.yaml  config_itembasedcf.yaml  config_itemknn.yaml  config_lightgcn.yaml  config_narm.yaml  config_narm_spam.yaml  config_pop.yaml  config_pop_sbr.yaml  config_random.yaml  config_sasrec.yaml  config_sasrec_spam.yaml  config_sets2sets.yaml  config_sgl.yaml  config_simrec.yaml  config_sknn.yaml  config_sknn_sbr.yaml  config_spectralcf.yaml  config_srgnn.yaml  config_srgnn_spam.yaml  create_nbr_unlearning_sets_user_ids.py  eval_all_models.py  eval_original_models.py  pyproject.toml  requirements.txt  requirements_cu129.txt  run.py  run_baselines.sh  run_baselines_sbr.py  run_baselines_sbr.sh  run_recbole.py  (+2 more)
dataset/: create_fraud_baskets_nbr.py  create_fraud_baskets_nbr_multiple_seeds.sh  create_fraud_sessions_nowp_multiple_seeds.sh  create_fraud_sessions_sbr.py  create_nbr_unlearning_sets_user_ids.py  create_nowp_test_subset.py  create_spam_sessions.py  create_spam_sessions_multiple_seeds.sh  create_test_subset.py  generate_test_forget_sets.py
dataset/30music/: convert_sessions_to_inter.py  create_forget_sets.py
dataset/amazon_reviews/: amazon_reviews_unlearn_pairs_sensitive_category_alcohol_seed_11_unlearning_fraction_0.0001.inter  amazon_reviews_unlearn_pairs_sensitive_category_alcohol_seed_11_unlearning_fraction_1e-05.inter  deduplicate.py  (+33 more)
(+74 files in other folders)
